--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    user-select: none;
+    outline: none;
+    font-family: "Gotham-Black", Arial, sans-serif !important;
+}
+
+
+::-webkit-scrollbar {
+    display: none;
+}
