--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
     box-sizing: border-box;
     user-select: none;
     outline: none;
+    overflow: hidden;
     font-family: "Gotham-Black", Arial, sans-serif !important;
 }
 
