--- a/src/components/Header/Headers.css
+++ b/src/components/Header/Headers.css
@@ -4,8 +4,12 @@
 }
 
 nav ul li {
-    margin-right: 50px;
+    margin-right: 70px;
     font-size: 20px;
     color: #fff;
     cursor: pointer;
+}
+
+.icon {
+    color: #9CA3AF;
 }
