--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,8 +4,8 @@
 
 #carouselExampleSlidesOnly h3 {
     position: absolute;
-    bottom: 30%;
-    left: 10%;
+    bottom: 25%;
+    left: 5%;
     z-index: 1;
     color: #fff;
     width: 50%;
@@ -20,11 +20,11 @@
 
 .textbox p {
     position: absolute;
-    bottom: 10%;
+    bottom: 5%;
     left: 5%;
     color: #fff;
-    font-size: 25px;
-    width: 60%;
+    font-size: 20px;
+    padding-right: 12px;
 }
 
 .imgbox {
@@ -33,13 +33,25 @@
     height: 600px;
 }
 
-@media screen and (max-width: 992px) {
-    #carouselExampleSlidesOnly h3 {
-        font-size: 22px;
-        width: 80%;
+.col-md-3 .imgbox {
+    height: 400px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1300px) {
+    .col-md-3 .imgbox {
+        width: 100%;
+        height: 250px;
     }
 
     .textbox p {
+        font-size: 16px;
+        padding: 0 8px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    #carouselExampleSlidesOnly h3 {
+        font-size: 22px;
         width: 80%;
     }
 }
