--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,24 @@ section {
 }
 
 ::-webkit-scrollbar {
-    display: none;
+    width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #777;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #333;
+}
+
+::-webkit-scrollbar-track:hover {
+    background-color: #555;
 }
 
 .imgbox img {
