--- a/src/components/Header/Headers.css
+++ b/src/components/Header/Headers.css
@@ -1,9 +1,16 @@
+header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+}
+
 .logo,
 .profile {
     cursor: pointer;
 }
 
-nav ul li {
+ul li {
     margin-right: 70px;
     font-size: 20px;
     color: #fff;
@@ -26,14 +33,43 @@ nav ul li {
 }
 
 @media screen and (max-width: 1025px) {
-    nav {
-        display: none;
+    ul {
+        width: 100%;
+        min-height: 100vh;
+        background-color: #000;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 55px;
+        left: -100%;
+        right: 0;
+        padding: 30px;
+        transition: all 0.5s ease-in-out
     }
+
+    .show {
+        left: 0;
+    }
+
+    .hide {
+        left: -100%;
+    }
+
+    ul li {
+        padding: 15px;
+    }
+
+    .inputBox {
+        order: -1;
+        width: 100%;
+    }
+
 
     .hamburgerMenu {
         display: block;
         color: #fff;
         font-size: 25px;
+        cursor: pointer;
     }
 
 }
