--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -31,6 +31,7 @@
     color: #fff;
     font-size: 20px;
     padding-right: 12px;
+    line-height: 1.2;
 }
 
 .textbox .descriptionTitle {
@@ -73,6 +74,7 @@
     height: 350px;
 }
 
+
 @media screen and (min-width: 768px) and (max-width: 1300px) {
     .col-md-3 .imgbox {
         width: 100%;
@@ -93,18 +95,20 @@
     }
 
     .carouselTitle {
-        position: absolute;
-        top: 60%;
+        top: 61%;
     }
 
-    .textbox .descriptionTitle {
-        position: absolute;
-        left: 12%;
-        bottom: 28%;
+    .carouselTitle h4 {
+        font-size: 10px;
+    }
+
+    .descriptionTitle {
+        bottom: 32% !important;
+        left: 13% !important;
     }
 
     .descriptionTitle h4 {
-        font-size: 7px;
+        font-size: 5px;
     }
 
     .textbox p {
