--- a/src/components/Header/Headers.css
+++ b/src/components/Header/Headers.css
@@ -6,17 +6,30 @@ header {
     transition: top 0.3s ease-in-out;
 }
 
-
 .logo,
 .profile {
     cursor: pointer;
 }
 
+ul {
+    align-items: center;
+}
+
 ul li {
-    margin-right: 70px;
+    margin-right: 40px;
     font-size: 20px;
     color: #fff;
     cursor: pointer;
+}
+
+ul .menuText {
+    padding: 4px 20px;
+}
+
+ul .menuText:hover {
+    background-color: rgb(44, 44, 44);
+    border-radius: 24px;
+    transition: all 0.5s ease-in-out;
 }
 
 .icon {
@@ -36,7 +49,6 @@ ul li {
 }
 
 .hamburgerMenu,
-.leftArrow,
 .languageIcon {
     display: none;
 }
@@ -50,6 +62,7 @@ ul li {
         background-color: #000;
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         position: absolute;
         top: 80%;
         left: -100%;
@@ -57,6 +70,10 @@ ul li {
         padding: 50px 10px;
         transition: all 0.5s ease-in-out;
         z-index: 999;
+    }
+
+    .link {
+        width: 100%;
     }
 
     ul .menuText {
@@ -88,8 +105,7 @@ ul li {
         height: 32px;
     }
 
-    .hamburgerMenu,
-    .leftArrow {
+    .hamburgerMenu {
         display: block;
         color: #fff;
         font-size: 25px;
@@ -103,7 +119,6 @@ ul li {
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 40px;
-
+        font-size: 33px;
     }
 }
