--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -51,13 +51,18 @@
     padding: 2px 5px;
 }
 
-
 .descriptionTitle {
     padding: 2px 5px 0;
 }
 
 .descriptionTitle h4 {
     font-size: 12px;
+}
+
+.box {
+    border: 2px solid #aa0dda;
+    border-radius: 30px;
+    overflow: hidden;
 }
 
 .imgbox {
