--- a/src/index.css
+++ b/src/index.css
@@ -16,29 +16,51 @@
     background-color: #000;
 }
 
-::-webkit-scrollbar {
-    display: none;
-}
-
 section {
     padding: 40px 0;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #555;
+    background-color: #555 !important;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #777;
+    background-color: #777 !important;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #333;
+    background-color: #333 !important;
 }
 
 ::-webkit-scrollbar-track:hover {
-    background-color: #555;
+    background-color: #555 !important;
+}
+
+* {
+    scrollbar-color: #555 #333;
+    scrollbar-width: thin;
+}
+
+*::-webkit-scrollbar {
+    width: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #555 !important;
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #777 !important;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: #333 !important;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #555 !important;
 }
 
 .imgbox img {
